--- a/public/index.html
+++ b/public/index.html
@@ -37,13 +37,13 @@
     <script>var Alert = ReactBootstrap.Alert;</script>
     
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/8.6.5/firebase-app.js"></script>
+    <!-- <script src="/__/firebase/8.6.5/firebase-app.js"></script> -->
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#available-libraries -->
 
     <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
+    <!-- <script src="/__/firebase/init.js"></script> -->
     
     <link
       rel="stylesheet"
